syntax = "proto3";
package user;


service UserService {
    rpc GetUser (GetUserRequest) returns (GetUserReply);
    rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
    rpc EditUser (EditUserRequest) returns (EditUserReply);
}

message Address {
    string street_name = 1;
    string street_number = 2;
    string city = 3;
    optional string area = 4;
    string postal_code = 5;
    string country = 6;
    string valid_from = 7;
}

message User {
    string first_name = 1;
    string last_name = 2;
    string civil_id_number = 3;
    string email = 4;
    string phone_number = 5;
    optional string photo = 7;
    Address address = 8;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserReply {
    User user = 1;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserReply {
    int32 id = 1;
}

message EditUserRequest {
    int32 id = 1;
    optional string first_name = 2;
    optional string last_name = 3;
    optional string civil_id_number = 4;
    optional string email = 5;
    optional string phone_number = 6;
    optional string photo = 7;
}

message EditUserReply {}
